Test class and minor changes